Added billing endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -58,3 +58,39 @@ functions:
           method: get
           cors: true
           authorizer: aws_iam
+
+  list:
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
+          cors: true
+          authorizer: aws_iam
+
+  update:
+    handler: update.main
+    events:
+      - http:
+          path: notes/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
+
+  delete:
+    handler: delete.main
+    events:
+      - http:
+          path: notes/{id}
+          method: delete
+          cors: true
+          authorizer: aws_iam
+
+  billing:
+    handler: billing.main
+    events:
+      - https:
+          path: billing
+          method: post
+          cors: true
+          authorizer: aws_iam
